manifests/013-argo-workflows.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflows-route
  namespace: argo-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: 'Host(`argo-workflows.docker.localhost`)'
      kind: Rule
      services:
      - kind: Service
        name: argo-workflows-server
        namespace: argo-system
        port: 2746
        passHostHeader: true
  tls:
    secretName: argo-workflows.docker.localhost
